feat:login page

--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -6,6 +6,6 @@
     <router-outlet></router-outlet>
   </main>
 
-  <!-- <app-page-footer class="d-block" [initialYear]="2024"></app-page-footer> -->
+  <app-page-footer class="d-block" *ngIf="false" [initialYear]="2024"></app-page-footer>
 
 </div>
