--- a/src/app/features/login/pages/login/login.component.html
+++ b/src/app/features/login/pages/login/login.component.html
@@ -1,7 +1,9 @@
 <div class="login-container">
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
 
-    <p>Bem vinda!</p>
+    <img src="assets/images/logo.png">
+
+    <p>BEM VINDA!</p>
 
     <mat-form-field appearance="fill">
       <mat-label>USUÁRIO</mat-label>
@@ -10,12 +12,20 @@
 
     <mat-form-field appearance="fill">
       <mat-label>SENHA</mat-label>
-      <input matInput type="password" formControlName="password" required>
+      <input matInput [type]="showPassword ? 'password' : 'text'" formControlName="password" required>
+      <button mat-icon-button matSuffix (click)="togglePasswordVisibility()" type="button">
+        <svg *ngIf="showPassword" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M12 4.5C7 4.5 2.73 7.61 1 12C2.73 16.39 7 19.5 12 19.5C17 19.5 21.27 16.39 23 12C21.27 7.61 17 4.5 12 4.5ZM12 17C9.24 17 7 14.76 7 12C7 9.24 9.24 7 12 7C14.76 7 17 9.24 17 12C17 14.76 14.76 17 12 17ZM12 9C10.34 9 9 10.34 9 12C9 13.66 10.34 15 12 15C13.66 15 15 13.66 15 12C15 10.34 13.66 9 12 9Z" fill="black" fill-opacity="0.56"/>
+        </svg>
+        <svg *ngIf="!showPassword" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M12 4.5C17 4.5 21.27 7.61 23 12C21.27 16.39 17 19.5 12 19.5C7 19.5 2.73 16.39 1 12C2.73 7.61 7 4.5 12 4.5ZM12 17C14.76 17 17 14.76 17 12C17 9.24 14.76 7 12 7C9.24 7 7 9.24 7 12C7 14.76 9.24 17 12 17ZM12 9C13.66 9 15 10.34 15 12C15 13.66 13.66 15 12 15C10.34 15 9 13.66 9 12C9 10.34 10.34 9 12 9Z" fill="black" fill-opacity="0.56"/>
+        </svg>
+      </button>
     </mat-form-field>
 
     <div class="button-container">
       <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid">ENTRAR</button>
     </div>
-    
+
   </form>
 </div>
