--- a/src/app/features/login/pages/login/login.component.scss
+++ b/src/app/features/login/pages/login/login.component.scss
@@ -4,7 +4,6 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #f5f5f5;
 }
 .button-container{
   display: flex;
@@ -14,6 +13,10 @@
 
 form {
   width: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 mat-form-field {
@@ -30,4 +33,8 @@ p{
 
 button{
   padding: 14px, 24px, 14px, 24px;
+}
+
+span{
+  padding: 10px;
 }
