--- a/src/app/shared/components/page-header/page-header.component.html
+++ b/src/app/shared/components/page-header/page-header.component.html
@@ -1,14 +1,24 @@
-<div class="fixed-top mb-4">
+<mat-sidenav-container class="example-container">
+  <mat-sidenav #sidenav mode="over">
+    <p>Sun Home</p>
 
-  <header class="navbar navbar-dark bg-primary p-0">
+    <mat-nav-list>
+      <a mat-list-item href="#">Home</a>
+      <a mat-list-item href="#">Cadastrar Produto</a>
+      <a mat-list-item href="#">Registrar Venda</a>
+      <a mat-list-item href="#">Acessar Faturamentos</a>
+      <a mat-list-item href="#">Listar produtos</a>
+      <a mat-list-item href="#">Log out</a>
+    </mat-nav-list>
+  </mat-sidenav>
 
-    <div class="container-fluid h-100 d-flex justify-content-between align-items-stretch p-0">
-        <div class="d-flex align-items-center" routerLink="home">
-          Title goes here
-        </div>
-
-    </div>
-
-  </header>
-
-</div>
+  <mat-sidenav-content>
+    <mat-toolbar class="mat-elevation-z4">
+      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"
+        (click)="sidenav.toggle()">
+        <mat-icon>menu</mat-icon>
+      </button>
+      <span>{{title}}</span>
+    </mat-toolbar>
+  </mat-sidenav-content>
+</mat-sidenav-container>
