--- a/src/app/shared/components/page-header/page-header.component.scss
+++ b/src/app/shared/components/page-header/page-header.component.scss
@@ -1,3 +1,12 @@
-.navbar {
-  height: 70px;
+.example-container {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+p{
+  font-size: 14px;
+  padding: 10px;
 }
