--- a/src/app/features/landing/pages/landing/landing.component.html
+++ b/src/app/features/landing/pages/landing/landing.component.html
@@ -1,1 +1,16 @@
-<div>landing</div>
+<div >
+  <div>
+    <h1>Lucros do mês</h1>
+    <p>(maio)</p>
+    <span>R$ 2.322,56</span>
+  </div>
+  <h2>Acesso Rápido</h2>
+  <div>
+    <button mat-fab aria-label="Registrar venda">
+      <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M38.82 18.82L21.16 1.16C20.42 0.42 19.4 0 18.34 0H4C1.8 0 0 1.8 0 4V18.34C0 19.4 0.42 20.42 1.18 21.16L18.84 38.82C20.4 40.38 22.94 40.38 24.5 38.82L38.84 24.48C40.4 22.92 40.4 20.4 38.82 18.82ZM9 12C7.34 12 6 10.66 6 9C6 7.34 7.34 6 9 6C10.66 6 12 7.34 12 9C12 10.66 10.66 12 9 12Z" fill="white"/>
+        </svg>        
+    </button>
+  </div>
+</div>
+
