--- a/src/app/shared/components/page-header/page-header.component.html
+++ b/src/app/shared/components/page-header/page-header.component.html
@@ -1,7 +1,6 @@
 <mat-sidenav-container class="example-container">
   <mat-sidenav #sidenav mode="over">
     <p>Sun Home</p>
-
     <mat-nav-list>
       <a mat-list-item href="#">Home</a>
       <a mat-list-item href="#">Cadastrar Produto</a>
@@ -20,5 +19,9 @@
       </button>
       <span>{{title}}</span>
     </mat-toolbar>
+
+    <main role="main">
+      <router-outlet></router-outlet>
+    </main>
   </mat-sidenav-content>
 </mat-sidenav-container>
