--- a/src/app/shared/components/page-header/page-header.component.scss
+++ b/src/app/shared/components/page-header/page-header.component.scss
@@ -1,12 +1,9 @@
 .example-container {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  height: 100vh;
+  width: 100vw;
 }
 
-p{
+p {
   font-size: 14px;
   padding: 10px;
 }
