--- a/src/app/shared/components/page-header/page-header.component.html
+++ b/src/app/shared/components/page-header/page-header.component.html
@@ -12,12 +12,12 @@
   </mat-sidenav>
 
   <mat-sidenav-content>
-    <mat-toolbar class="mat-elevation-z4">
+    <mat-toolbar class="mat-elevation-z4" *ngIf="showHeader">
       <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"
         (click)="sidenav.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
-      <span>{{title}}</span>
+      <span>{{getTitle}}</span>
     </mat-toolbar>
 
     <main role="main">
