feat: implements landing page

--- a/src/app/themes/custom-theme.scss
+++ b/src/app/themes/custom-theme.scss
@@ -2374,7 +2374,7 @@ html {
   --mat-sidenav-container-divider-color: rgba(0, 0, 0, 0.12);
   --mat-sidenav-container-background-color: white;
   --mat-sidenav-container-text-color: rgba(0, 0, 0, 0.87);
-  --mat-sidenav-content-background-color: #fafafa;
+  --mat-sidenav-content-background-color: #FFF;
   --mat-sidenav-content-text-color: rgba(0, 0, 0, 0.87);
   --mat-sidenav-scrim-color: rgba(0, 0, 0, 0.6)
 }
