--- a/src/app/features/landing/pages/landing/landing.component.html
+++ b/src/app/features/landing/pages/landing/landing.component.html
@@ -1,16 +1,71 @@
-<div >
-  <div>
-    <h1>Lucros do mês</h1>
-    <p>(maio)</p>
-    <span>R$ 2.322,56</span>
+<div class="main-container">
+  <div class="header-container">
+    <div>Lucros do mês</div>
+    <div>(maio)</div>
+    <div>R$ 2.322,56</div>
   </div>
-  <h2>Acesso Rápido</h2>
-  <div>
-    <button mat-fab aria-label="Registrar venda">
-      <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M38.82 18.82L21.16 1.16C20.42 0.42 19.4 0 18.34 0H4C1.8 0 0 1.8 0 4V18.34C0 19.4 0.42 20.42 1.18 21.16L18.84 38.82C20.4 40.38 22.94 40.38 24.5 38.82L38.84 24.48C40.4 22.92 40.4 20.4 38.82 18.82ZM9 12C7.34 12 6 10.66 6 9C6 7.34 7.34 6 9 6C10.66 6 12 7.34 12 9C12 10.66 10.66 12 9 12Z" fill="white"/>
-        </svg>        
-    </button>
-  </div>
-</div>
+  <div class="container-section">
+    <div>Acesso Rápido</div>
+    <div class="button-row">
+      <div class="button-container">
+        <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M38.82 18.82L21.16 1.16C20.42 0.42 19.4 0 18.34 0H4C1.8 0 0 1.8 0 4V18.34C0 19.4 0.42 20.42 1.18 21.16L18.84 38.82C20.4 40.38 22.94 40.38 24.5 38.82L38.84 24.48C40.4 22.92 40.4 20.4 38.82 18.82ZM9 12C7.34 12 6 10.66 6 9C6 7.34 7.34 6 9 6C10.66 6 12 7.34 12 9C12 10.66 10.66 12 9 12Z"
+            fill="white" />
+        </svg>
+        REGISTRAR VENDA
+      </div>
+      <div class="button-container">
+        <svg fill="#FFF" width="40" height="40" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 467.2 467.2" xml:space="preserve" stroke="#FFF">
+          <path
+            d="M455.146,120.9l-91.7-116.3c-2.3-2.9-5.7-4.6-9.4-4.6h-240.8c-3.7,0-7.1,1.7-9.4,4.6l-91.7,116.3 c-1.7,2.1-2.6,4.7-2.6,7.4v326.9c0,6.6,5.4,12,12,12h424.1c6.6,0,12-5.4,12-12V128.3C457.746,125.6,456.846,123,455.146,120.9z M422.546,118.3h-176.9V24h102.6L422.546,118.3z M119.046,24h102.6v94.3h-176.9L119.046,24z M33.546,443.2V142.3h400.1v300.9 L33.546,443.2L33.546,443.2z">
+          </path>
+          <path
+            d="M282.046,311.8l-36.5,36.5V211.6c0-6.6-5.4-12-12-12s-12,5.4-12,12v136.7l-36.3-36.3c-4.7-4.7-12.3-4.7-17,0 s-4.7,12.3,0,17l56.8,56.8l0,0c0.3,0.3,0.5,0.5,0.8,0.8c0.1,0.1,0.2,0.1,0.3,0.2c0.2,0.2,0.5,0.4,0.7,0.5c0.1,0,0.1,0.1,0.2,0.1 c0.3,0.2,0.5,0.3,0.8,0.5c0.1,0,0.1,0,0.2,0.1c0.3,0.2,0.6,0.3,0.9,0.4h0.1c0.3,0.1,0.7,0.3,1,0.4h0.1c0.3,0.1,0.7,0.2,1,0.3 c0.1,0,0.2,0,0.3,0c0.3,0,0.6,0.1,0.9,0.1c0.4,0,0.8,0.1,1.2,0.1s0.8,0,1.2-0.1c0.3,0,0.6-0.1,0.9-0.1c0.1,0,0.2,0,0.3,0 c0.4-0.1,0.7-0.2,1-0.3h0.1c0.3-0.1,0.7-0.2,1-0.4h0.1c0.3-0.1,0.6-0.3,0.9-0.4c0,0,0.1,0,0.1-0.1c0.3-0.1,0.5-0.3,0.8-0.5 c0.1,0,0.1-0.1,0.2-0.1c0.2-0.2,0.5-0.3,0.7-0.5c0.1-0.1,0.2-0.1,0.2-0.2c0.3-0.2,0.6-0.5,0.8-0.8l0,0l57-57 c4.7-4.7,4.7-12.3,0-17C294.346,307.1,286.746,307.1,282.046,311.8z">
+          </path>
+        </svg>
+        CADASTRAR PRODUTO
+      </div>
+    </div>
+    <div class="button-row">
+      <div class="button-container">
+        <svg fill="#FFF" width="40" height="40" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 487.4 487.4" xml:space="preserve" stroke="#FFF">
+          <path
+            d="M103.4,196.55c13.4,0,24.3,10.9,24.3,24.3c0,13.4-10.9,24.3-24.3,24.3s-24.3-10.9-24.3-24.3 C79.1,207.45,90,196.55,103.4,196.55z M463.4,329.25H350.9c-5.2,0-9.5,4.2-9.5,9.5v15.2c0,5.2,4.2,9.5,9.5,9.5h112.5 c5.2,0,9.5-4.2,9.5-9.5v-15.2C472.9,333.55,468.6,329.25,463.4,329.25z M447.3,375.75H334.8c-5.2,0-9.5,4.2-9.5,9.5v15.2 c0,5.2,4.2,9.5,9.5,9.5h112.5c5.2,0,9.5-4.2,9.5-9.5v-15.2C456.7,379.95,452.5,375.75,447.3,375.75z M477.9,236.35H365.4 c-5.2,0-9.5,4.2-9.5,9.5v15.2c0,5.2,4.2,9.5,9.5,9.5h112.5c5.2,0,9.5-4.2,9.5-9.5v-15.2C487.4,240.65,483.1,236.35,477.9,236.35z M325.3,292.25v15.2c0,5.2,4.2,9.5,9.5,9.5h112.5c5.2,0,9.5-4.2,9.5-9.5v-15.2c0-5.2-4.2-9.5-9.5-9.5H334.8 C329.6,282.85,325.3,287.05,325.3,292.25z M469.2,224.05c5.2,0,9.5-4.2,9.5-9.5v-15.2c0-5.2-4.2-9.5-9.5-9.5H356.8 c-5.2,0-9.5,4.2-9.5,9.5v15.2c0,5.2,4.2,9.5,9.5,9.5H469.2z M330.5,355.75v-18.8c0-4.2-3.4-7.7-7.7-7.7h-45.7h-196 c1.1-6,1-12.5-1.1-19.2c-3.3-10.7-11.2-19.5-21.2-24.5c-8.7-4.4-17-5-24.6-3.6v-122.9c9.1,1.6,19.2,0.5,29.8-6.7 c6.4-4.3,11.6-10.4,14.6-17.6c3.4-8.1,3.8-15.9,2.5-23.1h297.2c-1.5,6-1.7,12.5-0.1,19.2c3.5,15,15.6,26.9,30.7,30.2 c6.6,1.4,12.9,1.2,18.7-0.3v9.5c0,4.3,3.5,7.8,7.8,7.8H454c4.3,0,7.8-3.5,7.8-7.8v-52.8c0-22.1-17.9-40-40-40H40 c-22.1,0-40,17.9-40,40v205.8c0,22.1,17.9,40,40,40h237.1h45.7l0,0C327.1,363.45,330.5,360.05,330.5,355.75z M230.8,132.95 c48.3,0,87.6,39.3,87.6,87.6s-39.3,87.6-87.6,87.6s-87.6-39.3-87.6-87.6S182.5,132.95,230.8,132.95z M258.7,183.95l-39.2,39 l-16.4-16.5l-17.1,17l16.4,16.5l17,17.1l17.1-17l39.2-39L258.7,183.95z">
+          </path>
+        </svg>
+        VERIFICAR FATURAMENTO
+      </div>
+      <div class="button-container">
+        <svg fill="#FFF" width="40" height="40" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 483.1 483.1" xml:space="preserve" stroke="#FFF">
+          <path
+            d="M434.55,418.7l-27.8-313.3c-0.5-6.2-5.7-10.9-12-10.9h-58.6c-0.1-52.1-42.5-94.5-94.6-94.5s-94.5,42.4-94.6,94.5h-58.6 c-6.2,0-11.4,4.7-12,10.9l-27.8,313.3c0,0.4,0,0.7,0,1.1c0,34.9,32.1,63.3,71.5,63.3h243c39.4,0,71.5-28.4,71.5-63.3 C434.55,419.4,434.55,419.1,434.55,418.7z M241.55,24c38.9,0,70.5,31.6,70.6,70.5h-141.2C171.05,55.6,202.65,24,241.55,24z M363.05,459h-243c-26,0-47.2-17.3-47.5-38.8l26.8-301.7h47.6v42.1c0,6.6,5.4,12,12,12s12-5.4,12-12v-42.1h141.2v42.1 c0,6.6,5.4,12,12,12s12-5.4,12-12v-42.1h47.6l26.8,301.8C410.25,441.7,389.05,459,363.05,459z">
+          </path>
+        </svg>
+        LISTA DE PRODUTOS
+      </div>
+    </div>
+    <div>
+      <div>Produtos próximos da validade:</div>
+      <div>
+        <table mat-table [dataSource]="dataSource">
+          <ng-container matColumnDef="Descricao">
+            <th mat-header-cell *matHeaderCellDef> Descricao </th>
+            <td mat-cell *matCellDef="let element"> {{element.Descricao}} </td>
+          </ng-container>
 
+          <ng-container matColumnDef="Valor">
+            <th mat-header-cell *matHeaderCellDef> Valor </th>
+            <td mat-cell *matCellDef="let element"> {{element.Valor}} </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      </div>
+    </div>
+  </div>
+
+</div>
