--- a/src/app/shared/components/page-header/page-header.component.scss
+++ b/src/app/shared/components/page-header/page-header.component.scss
@@ -7,3 +7,13 @@ p {
   font-size: 14px;
   padding: 10px;
 }
+mat-toolbar {
+  height: 64px;
+  position: fixed;
+  z-index: 100;
+  width: 100%  !important;
+}
+
+main{
+  margin-top: 64px;
+}
