--- a/src/app/shared/components/page-header/page-header.component.html
+++ b/src/app/shared/components/page-header/page-header.component.html
@@ -3,21 +3,30 @@
     <p>Sun Home</p>
     <mat-nav-list>
       <a mat-list-item href="#">Home</a>
-      <a mat-list-item href="#">Cadastrar Produto</a>
-      <a mat-list-item href="#">Registrar Venda</a>
-      <a mat-list-item href="#">Acessar Faturamentos</a>
-      <a mat-list-item href="#">Listar produtos</a>
+      <a mat-list-item href="/newProduct">Cadastrar Produto</a>
+      <a mat-list-item href="/sell">Registrar Venda</a>
+      <a mat-list-item href="/revenue">Acessar Faturamentos</a>
+      <a mat-list-item href="/product">Listar produtos</a>
       <a mat-list-item href="#">Log out</a>
     </mat-nav-list>
   </mat-sidenav>
 
   <mat-sidenav-content>
     <mat-toolbar class="mat-elevation-z4" *ngIf="showHeader">
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"
-        (click)="sidenav.toggle()">
-        <mat-icon>menu</mat-icon>
-      </button>
-      <span>{{getTitle}}</span>
+      <div class="header-flex">
+        <div class="header-title">
+          <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"
+            (click)="sidenav.toggle()">
+            <mat-icon>menu</mat-icon>
+          </button>
+          <span>{{getTitle}}</span>
+        </div>
+        <a href="#">
+          <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M18 28V22H22V28H27V20H30L20 11L10 20H13V28H18Z" fill="#FFA203" fill-opacity="0.87" />
+          </svg>
+        </a>
+      </div>
     </mat-toolbar>
 
     <main role="main">
