--- a/src/app/shared/components/page-header/page-header.component.scss
+++ b/src/app/shared/components/page-header/page-header.component.scss
@@ -7,13 +7,28 @@ p {
   font-size: 14px;
   padding: 10px;
 }
+
 mat-toolbar {
   height: 64px;
   position: fixed;
   z-index: 100;
-  width: 100%  !important;
+  width: 100% !important;
 }
 
-main{
+main {
   margin-top: 64px;
+}
+
+.header-flex {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.header-title{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
