--- a/src/app/features/revenue/pages/revenue/revenue.component.html
+++ b/src/app/features/revenue/pages/revenue/revenue.component.html
@@ -1,1 +1,16 @@
-<div>revenue page</div>
+<div class="main-container">
+  <div class="revenue-container"> 
+    <div>
+      <div>Lucros</div>
+      <div>100</div>
+    </div>
+    <div>
+      <div>Faturamento</div>
+      <div>100</div>
+    </div>
+  </div>
+  <div class="history-container">
+    <div>Historico de venda</div>
+    <div>Table</div>
+  </div>
+</div>
