--- a/src/app/features/landing/pages/landing/landing.component.html
+++ b/src/app/features/landing/pages/landing/landing.component.html
@@ -51,15 +51,15 @@
     <div>
       <div>Produtos próximos da validade:</div>
       <div>
-        <table mat-table [dataSource]="dataSource">
+        <table mat-table [dataSource]="products">
           <ng-container matColumnDef="Descricao">
             <th mat-header-cell *matHeaderCellDef> Descricao </th>
-            <td mat-cell *matCellDef="let element"> {{element.Descricao}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
           </ng-container>
 
           <ng-container matColumnDef="Valor">
             <th mat-header-cell *matHeaderCellDef> Valor </th>
-            <td mat-cell *matCellDef="let element"> {{element.Valor}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.validUntil | date}} </td>
           </ng-container>
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
