--- a/src/app/features/sell/pages/sell/sell.component.html
+++ b/src/app/features/sell/pages/sell/sell.component.html
@@ -1,13 +1,46 @@
 <div class="main-container">
   <div class="form-container">
     <div>Informações da venda:</div>
-    <div>Descricao</div>
-    <mat-form-field>
-      <mat-label>Textarea</mat-label>
-      <textarea matInput></textarea>
+    <mat-form-field appearance="fill">
+      <mat-label>Cliente</mat-label>
+      <input matInput [(ngModel)]="clientName">
+    </mat-form-field>
+    <div>Produtos</div>
+    <table mat-table [dataSource]="productsVariations">
+
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox (change)="$event ? masterToggle() : null" 
+                        [checked]="isAllSelected()"
+                        [indeterminate]="isIndeterminate()">
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let element">
+          <mat-checkbox (click)="$event.stopPropagation()"
+                        (change)="$event ? toggleSelection(element) : null"
+                        [checked]="selection.isSelected(element)">
+          </mat-checkbox>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Produto">
+        <th mat-header-cell *matHeaderCellDef> Produto </th>
+        <td mat-cell *matCellDef="let element"> {{element.Produto}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="Valor">
+        <th mat-header-cell *matHeaderCellDef> Valor </th>
+        <td mat-cell *matCellDef="let element"> R$ {{element.Valor}},00 </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <mat-form-field appearance="fill">
+      <mat-label>Valor Total</mat-label>
+      <input matInput [ngModel]="sumValue" [disabled]="true">
     </mat-form-field>
   </div>
   <div class="button-container">
-    <button mat-raised-button color="primary" type="submit">Executar</button>
+    <button mat-raised-button color="primary" (click)="newSale()">Executar</button>
   </div>
 </div>
