--- a/src/app/features/sell/pages/sell/sell.component.scss
+++ b/src/app/features/sell/pages/sell/sell.component.scss
@@ -20,6 +20,18 @@
   text-align: right;
 }
 
+.sale-info{
+  font-weight: 700;
+  font-size: 14px;
+  color: #000000DE;
+}
+
+.product{
+  font-weight: 700;
+  font-size: 14px;
+  color: #000000DE;
+}
+
 input.example-right-align::-webkit-outer-spin-button,
 input.example-right-align::-webkit-inner-spin-button {
   display: none;
