--- a/src/app/features/landing/pages/landing/landing.component.scss
+++ b/src/app/features/landing/pages/landing/landing.component.scss
@@ -1,11 +1,9 @@
-
-
 .main-container {
   display: flex;
   flex-direction: column;
 }
 
-.header-container{
+.header-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -14,7 +12,7 @@
 }
 
 .container-section {
-  padding:20px;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -39,6 +37,41 @@
   height: 120px;
   border-radius: 20px;
 }
+
+.profit-title {
+  font-weight: 500;
+  font-size: 20px;
+  color: #000000DE;
+}
+
+.month-text{
+  font-weight: 400;
+  font-size: 12px;
+  color: #000000DE;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+.profit-text{
+  font-weight: 400;
+  font-size: 34px;
+  color: #287934DE;
+}
+
 table {
   width: 100%;
+}
+
+.acesso-rapido{
+  font-weight: 500;
+  font-size: 20px;
+  color: #000000DE;
+  margin-bottom: 10px;
+}
+
+.validade{
+  font-weight: 700;
+  font-size: 14px;
+  color: #000000DE;
+  margin-bottom: 10px;
 }
