--- a/src/app/features/revenue/pages/revenue/revenue.component.html
+++ b/src/app/features/revenue/pages/revenue/revenue.component.html
@@ -1,16 +1,32 @@
 <div class="main-container">
+  <div class="month-text">{{currentMonth}}</div>
   <div class="revenue-container"> 
-    <div>
-      <div>Lucros</div>
-      <div>100</div>
+    <div class="revenue-box">
+      <div class="upper-text">Lucros</div>
+      <div class="lower-text">{{profit}}</div>
     </div>
-    <div>
-      <div>Faturamento</div>
-      <div>100</div>
+    <div class="revenue-box">
+      <div class="upper-text">Faturamento</div>
+      <div class="lower-text">{{revenue}}</div>
     </div>
   </div>
   <div class="history-container">
-    <div>Historico de venda</div>
-    <div>Table</div>
+    <div class="history-text">Historico de venda</div>
+    <table *ngIf="saleInfoScreen && saleInfoScreen.length > 0" mat-table [dataSource]="saleInfoScreen">
+      <ng-container matColumnDef="Descricao">
+        <th mat-header-cell *matHeaderCellDef> Descricao </th>
+        <td mat-cell *matCellDef="let element"> {{element.Descricao}} </td>
+      </ng-container>
+      <ng-container matColumnDef="Data">
+        <th mat-header-cell *matHeaderCellDef> Data </th>
+        <td mat-cell *matCellDef="let element"> {{element.Data | date}} </td>
+      </ng-container>
+      <ng-container matColumnDef="Valor">
+        <th mat-header-cell *matHeaderCellDef> Valor </th>
+        <td mat-cell *matCellDef="let element"> {{element.Valor}} </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
   </div>
 </div>
