--- a/src/app/features/revenue/pages/revenue/revenue.component.scss
+++ b/src/app/features/revenue/pages/revenue/revenue.component.scss
@@ -1,4 +1,4 @@
-.main-container{
+.main-container {
   display: flex;
   flex-direction: column;
   padding: 20px;
@@ -6,13 +6,47 @@
   align-items: center;
 }
 
-.revenue-container{
+.revenue-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 80%;
 }
 
-.history-container{
+.month-text{
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.revenue-box{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.history-container {
   margin-top: 20px;
+}
+
+.upper-text {
+  font-weight: 400;
+  font-size: 12px;
+  color: #000000DE;
+  margin-bottom: 10px;
+}
+
+.lower-text {
+  color: #287934DE;
+  font-size: 24px;
+  font-weight: 400;
+}
+
+.history-text {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  color: black;
+  font-weight: 500;
+  font-size: 20px;
 }
