feat: aplicando testes E2E

--- a/src/app/features/landing/pages/landing/landing.component.html
+++ b/src/app/features/landing/pages/landing/landing.component.html
@@ -7,7 +7,7 @@
   <div class="container-section">
     <div class="acesso-rapido">Acesso Rápido</div>
     <div class="button-row">
-      <div class="button-container" (click)="onClickNavigate('sell')">
+      <div class="button-container" (click)="onClickNavigate('sell')" data-cy="sell">
         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M38.82 18.82L21.16 1.16C20.42 0.42 19.4 0 18.34 0H4C1.8 0 0 1.8 0 4V18.34C0 19.4 0.42 20.42 1.18 21.16L18.84 38.82C20.4 40.38 22.94 40.38 24.5 38.82L38.84 24.48C40.4 22.92 40.4 20.4 38.82 18.82ZM9 12C7.34 12 6 10.66 6 9C6 7.34 7.34 6 9 6C10.66 6 12 7.34 12 9C12 10.66 10.66 12 9 12Z"
@@ -15,7 +15,7 @@
         </svg>
         REGISTRAR VENDA
       </div>
-      <div class="button-container" (click)="onClickNavigate('newProduct')">
+      <div data-cy="new-product" class="button-container" (click)="onClickNavigate('newProduct')">
         <svg fill="#FFF" width="40" height="40" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
           xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 467.2 467.2" xml:space="preserve" stroke="#FFF">
           <path
@@ -28,7 +28,7 @@
         CADASTRAR PRODUTO
       </div>
     </div>
-    <div class="button-row" (click)="onClickNavigate('revenue')">
+    <div class="button-row" (click)="onClickNavigate('revenue')" data-cy="revenue">
       <div class="button-container">
         <svg fill="#FFF" width="40" height="40" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
           xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 487.4 487.4" xml:space="preserve" stroke="#FFF">
@@ -38,7 +38,7 @@
         </svg>
         VERIFICAR FATURAMENTO
       </div>
-      <div class="button-container" (click)="onClickNavigate('product')">
+      <div class="button-container" (click)="onClickNavigate('product')" data-cy="product">
         <svg fill="#FFF" width="40" height="40" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
           xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 483.1 483.1" xml:space="preserve" stroke="#FFF">
           <path
