--- a/src/app/features/product/pages/product/product.component.html
+++ b/src/app/features/product/pages/product/product.component.html
@@ -11,15 +11,15 @@
     </svg> -->
 
   </div>
-  <table mat-table [dataSource]="filteredProductsScreen">
+  <table mat-table [dataSource]="filteredProductsScreen" data-cy="product-list">
     <ng-container matColumnDef="Produto">
       <th mat-header-cell *matHeaderCellDef> Produto </th>
-      <td mat-cell *matCellDef="let element"> {{element.Produto}} </td>
+      <td mat-cell *matCellDef="let element" data-cy="product-item"> {{element.Produto}} </td>
     </ng-container>
 
     <ng-container matColumnDef="Quantidade">
       <th mat-header-cell *matHeaderCellDef> Quantidade </th>
-      <td mat-cell *matCellDef="let element"> {{element.Quantidade}} </td>
+      <td mat-cell *matCellDef="let element" data-cy="product-quantity"> {{element.Quantidade}} </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
